# embeddedsw-experimental-dt-support

./: README.txt  license.txt
XilinxProcessorIPLib/drivers/: CMakeLists.txt
XilinxProcessorIPLib/drivers/aiefal/examples/: CMakeLists.txt
XilinxProcessorIPLib/drivers/aiefal/src/: CMakeLists.txt
XilinxProcessorIPLib/drivers/avbuf/data/: avbuf.yaml
XilinxProcessorIPLib/drivers/avbuf/src/: CMakeLists.txt  xavbuf.c  xavbuf.h
XilinxProcessorIPLib/drivers/axicdma/data/: axicdma.yaml  xaxicdma_sg_intr_header.h  xaxicdma_sg_poll_header.h  xaxicdma_simple_intr_header.h  xaxicdma_simple_poll_header.h
XilinxProcessorIPLib/drivers/axicdma/examples/: CMakeLists.txt  xaxicdma_example_hybrid_intr.c  xaxicdma_example_hybrid_poll.c  xaxicdma_example_sg_intr.c  xaxicdma_example_sg_poll.c  xaxicdma_example_simple_intr.c  xaxicdma_example_simple_poll.c
XilinxProcessorIPLib/drivers/axicdma/src/: CMakeLists.txt  xaxicdma.c  xaxicdma.h  xaxicdma_hw.h  xaxicdma_sinit.c
XilinxProcessorIPLib/drivers/axidma/data/: axidma.tcl  axidma.yaml
XilinxProcessorIPLib/drivers/axidma/examples/: CMakeLists.txt  xaxidma_example_poll_multi_pkts.c  xaxidma_example_selftest.c  xaxidma_example_sg_intr.c  xaxidma_example_sg_poll.c  xaxidma_example_sgcyclic_intr.c  xaxidma_example_simple_intr.c  xaxidma_example_simple_poll.c
XilinxProcessorIPLib/drivers/axidma/src/: CMakeLists.txt  xaxidma.h  xaxidma_sinit.c
XilinxProcessorIPLib/drivers/axiethernet/data/: axiethernet.yaml
XilinxProcessorIPLib/drivers/axiethernet/examples/: CMakeLists.txt  xaxiethernet_example_extmulticast.c  xaxiethernet_example_extvlan.c  xaxiethernet_example_intr_mcdma.c  xaxiethernet_example_intr_sgdma.c  xaxiethernet_example_mcdma_poll.c  xaxiethernet_example_util.c
XilinxProcessorIPLib/drivers/axiethernet/src/: CMakeLists.txt  xaxiethernet.c  xaxiethernet.h  xaxiethernet_sinit.c
XilinxProcessorIPLib/drivers/axipcie/data/: axipcie.yaml
XilinxProcessorIPLib/drivers/axipmon/data/: axipmon.yaml
XilinxProcessorIPLib/drivers/axipmon/examples/: CMakeLists.txt  xaxipmon_intr_example.c  xaxipmon_ocm_example.c  xaxipmon_polled_example.c
XilinxProcessorIPLib/drivers/axipmon/src/: CMakeLists.txt  xaxipmon.c  xaxipmon.h  xaxipmon_sinit.c
XilinxProcessorIPLib/drivers/axis_switch/data/: axis_switch.yaml
XilinxProcessorIPLib/drivers/axis_switch/src/: CMakeLists.txt  xaxis_switch.h  xaxis_switch_sinit.c
XilinxProcessorIPLib/drivers/axivdma/data/: axivdma.yaml  axivdma_header.h
XilinxProcessorIPLib/drivers/axivdma/examples/: CMakeLists.txt  xaxivdma_example_intr.c  xaxivdma_example_selftest.c
XilinxProcessorIPLib/drivers/axivdma/src/: CMakeLists.txt  xaxivdma.h  xaxivdma_sinit.c
XilinxProcessorIPLib/drivers/bram/data/: bram.yaml
XilinxProcessorIPLib/drivers/bram/examples/: CMakeLists.txt  xbram_example.c
XilinxProcessorIPLib/drivers/bram/src/: CMakeLists.txt  xbram.h  xbram_sinit.c
XilinxProcessorIPLib/drivers/can/data/: can.yaml
XilinxProcessorIPLib/drivers/can/examples/: CMakeLists.txt  xcan_intr_example.c  xcan_polled_example.c
XilinxProcessorIPLib/drivers/can/src/: CMakeLists.txt  xcan.c  xcan.h
XilinxProcessorIPLib/drivers/canfd/data/: canfd.yaml
XilinxProcessorIPLib/drivers/canfd/examples/: CMakeLists.txt  xcanfd_intr_example.c  xcanfd_polled_example.c
XilinxProcessorIPLib/drivers/canfd/src/: CMakeLists.txt  xcanfd.c  xcanfd.h  xcanfd_hw.h  xcanfd_sinit.c
XilinxProcessorIPLib/drivers/canps/data/: canps.tcl  canps.yaml
XilinxProcessorIPLib/drivers/canps/examples/: CMakeLists.txt  xcanps_intr_example.c  xcanps_polled_example.c  xcanps_watermark_intr_example.c
XilinxProcessorIPLib/drivers/canps/src/: CMakeLists.txt  xcanps.c  xcanps.h  xcanps_hw.c  xcanps_sinit.c
XilinxProcessorIPLib/drivers/cframe/data/: cframe.yaml
XilinxProcessorIPLib/drivers/cframe/src/: CMakeLists.txt  xcframe.h  xcframe_sinit.c
XilinxProcessorIPLib/drivers/cfupmc/data/: cfupmc.yaml
XilinxProcessorIPLib/drivers/cfupmc/src/: CMakeLists.txt  xcfupmc.h  xcfupmc_sinit.c
XilinxProcessorIPLib/drivers/clk_wiz/data/: clk_wiz.yaml
XilinxProcessorIPLib/drivers/clk_wiz/examples/: CMakeLists.txt  xclk_wiz_setrate_example.c  xclk_wiz_versal_example.c
XilinxProcessorIPLib/drivers/clk_wiz/src/: CMakeLists.txt  xclk_wiz.c  xclk_wiz.h  xclk_wiz_intr.c  xclk_wiz_sinit.c
XilinxProcessorIPLib/drivers/clockps/data/: clockps.yaml
XilinxProcessorIPLib/drivers/clockps/examples/: CMakeLists.txt  xclockps_i2c_example.c
XilinxProcessorIPLib/drivers/clockps/src/: CMakeLists.txt  xclockps.c  xclockps.h  xclockps_hw.h
XilinxProcessorIPLib/drivers/common/data/: common.yaml
XilinxProcessorIPLib/drivers/common/src/: CMakeLists.txt  xinterrupt_wrap.c  xinterrupt_wrap.h  xstatus.h
XilinxProcessorIPLib/drivers/coresightps_dcc/data/: coresightps_dcc.yaml
XilinxProcessorIPLib/drivers/coresightps_dcc/src/: CMakeLists.txt  xcoresightpsdcc.c
XilinxProcessorIPLib/drivers/csudma/data/: csudma.tcl  csudma.yaml  csudma_header.h  csudma_tapp.tcl
XilinxProcessorIPLib/drivers/csudma/examples/: CMakeLists.txt  xcsudma_intr_example.c  xcsudma_polled_example.c  xcsudma_selftest_example.c
XilinxProcessorIPLib/drivers/csudma/src/: CMakeLists.txt  xcsudma.h  xcsudma_sinit.c  xpmcdma.h
XilinxProcessorIPLib/drivers/ddrcpsu/data/: ddrcpsu.yaml
XilinxProcessorIPLib/drivers/ddrcpsu/src/: CMakeLists.txt  xddrcpsu.c  xddrcpsu.h  xddrcpsu_sinit.c
XilinxProcessorIPLib/drivers/ddrps/data/: ddrps.yaml
XilinxProcessorIPLib/drivers/ddrpsv/data/: ddrpsv.yaml
XilinxProcessorIPLib/drivers/devcfg/data/: devcfg.yaml
XilinxProcessorIPLib/drivers/devcfg/src/: CMakeLists.txt  xdevcfg.c  xdevcfg.h  xdevcfg_sinit.c
XilinxProcessorIPLib/drivers/dfxasm/data/: dfxasm.yaml
XilinxProcessorIPLib/drivers/dfxasm/examples/: CMakeLists.txt  xdfxasm_example.c
XilinxProcessorIPLib/drivers/dfxasm/src/: CMakeLists.txt  xdfxasm.c  xdfxasm.h  xdfxasm_sinit.c
XilinxProcessorIPLib/drivers/dmaps/data/: dmaps.yaml
XilinxProcessorIPLib/drivers/dmaps/src/: CMakeLists.txt  xdmaps.c  xdmaps.h  xdmaps_sinit.c
cmake/: Findcommon.cmake  (+2 more)
lib/sw_services/: CMakeLists.txt
(+1204 files in other folders)
