cmake_minimum_required(VERSION 3.15)
project(libxil)

if (${OS_ESW})
find_package(common)
include_directories(${CMAKE_BINARY_DIR}/include)
set(DRVLIST_DIR "${CMAKE_SOURCE_DIR}")
find_package(DRVLIST)
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
collector_list (_sources PROJECT_LIB_SOURCES)
FOREACH(DRIVER ${DRIVER_LIST})
    STRING(REGEX REPLACE "-" "_" DRIVER ${DRIVER})
    add_subdirectory(${DRIVER}/src)
    collector_list (_sources PROJECT_LIB_SOURCES)
    foreach (src ${_sources})
        list (APPEND sources ${DRIVER}/src/${src})
    endforeach()
ENDFOREACH()
add_library(xil STATIC ${sources})
set_target_properties(xil PROPERTIES LINKER_LANGUAGE C)
install(TARGETS xil LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..)
else()
include_directories(${CMAKE_BINARY_DIR}/include)
file(COPY xparameters.h DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(libxil INTERFACE)
endif()
