# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 2.8.9)
#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
project(axis_switch)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xaxis_switch.c)
collect (PROJECT_LIB_HEADERS xaxis_switch.h)
collect (PROJECT_LIB_SOURCES xaxis_switch_g.c)
collect (PROJECT_LIB_HEADERS xaxis_switch_hw.h)
collect (PROJECT_LIB_SOURCES xaxis_switch_selftest.c)
collect (PROJECT_LIB_SOURCES xaxis_switch_sinit.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
if (NOT ${OS_ESW})
add_library(axis_switch STATIC ${_sources})
set_target_properties(axis_switch PROPERTIES LINKER_LANGUAGE C)
install(TARGETS axis_switch LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif()
