# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
project(canps)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xcanps.c)
collect (PROJECT_LIB_HEADERS xcanps.h)
collect (PROJECT_LIB_SOURCES xcanps_selftest.c)
collect (PROJECT_LIB_SOURCES xcanps_hw.c)
collect (PROJECT_LIB_HEADERS xcanps_hw.h)
collect (PROJECT_LIB_SOURCES xcanps_intr.c)
collect (PROJECT_LIB_SOURCES xcanps_g.c)
collect (PROJECT_LIB_SOURCES xcanps_sinit.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
if (NOT ${OS_ESW})
add_library(canps STATIC ${_sources})
set_target_properties(canps PROPERTIES LINKER_LANGUAGE C)
install(TARGETS canps LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif()
