# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 2.8.9)
project(csudma)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xcsudma.c)
collect (PROJECT_LIB_HEADERS xcsudma_hw.h)
collect (PROJECT_LIB_HEADERS xpmcdma.h)
collect (PROJECT_LIB_SOURCES xcsudma_sinit.c)
collect (PROJECT_LIB_SOURCES xcsudma_selftest.c)
collect (PROJECT_LIB_HEADERS xcsudma.h)
collect (PROJECT_LIB_SOURCES xcsudma_g.c)
collect (PROJECT_LIB_SOURCES xcsudma_intr.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(csudma STATIC ${_sources})
set_target_properties(csudma PROPERTIES LINKER_LANGUAGE C)
#install(TARGETS csudma LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
