# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
project(emacps)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xemacps_intr.c)
collect (PROJECT_LIB_HEADERS xemacps_bd.h)
collect (PROJECT_LIB_HEADERS xemacps_hw.h)
collect (PROJECT_LIB_SOURCES xemacps.c)
collect (PROJECT_LIB_SOURCES xemacps_g.c)
collect (PROJECT_LIB_HEADERS xemacps_bdring.h)
collect (PROJECT_LIB_SOURCES xemacps_bdring.c)
collect (PROJECT_LIB_SOURCES xemacps_control.c)
collect (PROJECT_LIB_HEADERS xemacps.h)
collect (PROJECT_LIB_SOURCES xemacps_sinit.c)
collect (PROJECT_LIB_SOURCES xemacps_hw.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
if (NOT ${OS_ESW})
add_library(emacps STATIC ${_sources})
set_target_properties(emacps PROPERTIES LINKER_LANGUAGE C)
install(TARGETS emacps LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif()
