# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 2.8.9)
#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
project(iic)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xiic.c)
collect (PROJECT_LIB_HEADERS xiic.h)
collect (PROJECT_LIB_SOURCES xiic_dyn_master.c)
collect (PROJECT_LIB_SOURCES xiic_g.c)
collect (PROJECT_LIB_HEADERS xiic_i.h)
collect (PROJECT_LIB_SOURCES xiic_intr.c)
collect (PROJECT_LIB_SOURCES xiic_l.c)
collect (PROJECT_LIB_HEADERS xiic_l.h)
collect (PROJECT_LIB_SOURCES xiic_master.c)
collect (PROJECT_LIB_SOURCES xiic_multi_master.c)
collect (PROJECT_LIB_SOURCES xiic_options.c)
collect (PROJECT_LIB_SOURCES xiic_selftest.c)
collect (PROJECT_LIB_SOURCES xiic_sinit.c)
collect (PROJECT_LIB_SOURCES xiic_slave.c)
collect (PROJECT_LIB_SOURCES xiic_stats.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(iic STATIC ${_sources})
set_target_properties(iic PROPERTIES LINKER_LANGUAGE C)
#install(TARGETS iic LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
