# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
project(tmr_inject)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xtmr_inject.c)
collect (PROJECT_LIB_HEADERS xtmr_inject.h)
collect (PROJECT_LIB_SOURCES xtmr_inject_g.c)
collect (PROJECT_LIB_HEADERS xtmr_inject_i.h)
collect (PROJECT_LIB_HEADERS xtmr_inject_l.h)
collect (PROJECT_LIB_SOURCES xtmr_inject_selftest.c)
collect (PROJECT_LIB_SOURCES xtmr_inject_sinit.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
if (NOT ${OS_ESW})
add_library(tmr_inject STATIC ${_sources})
set_target_properties(tmr_inject PROPERTIES LINKER_LANGUAGE C)
install(TARGETS tmr_inject LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif()
