# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
project(tmr_manager)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xtmr_manager.c)
collect (PROJECT_LIB_HEADERS xtmr_manager.h)
collect (PROJECT_LIB_SOURCES xtmr_manager_g.c)
collect (PROJECT_LIB_HEADERS xtmr_manager_i.h)
collect (PROJECT_LIB_SOURCES xtmr_manager_intr.c)
collect (PROJECT_LIB_HEADERS xtmr_manager_l.h)
collect (PROJECT_LIB_SOURCES xtmr_manager_recover.c)
collect (PROJECT_LIB_SOURCES xtmr_manager_selftest.c)
collect (PROJECT_LIB_SOURCES xtmr_manager_sem.c)
collect (PROJECT_LIB_SOURCES xtmr_manager_sinit.c)
collect (PROJECT_LIB_SOURCES xtmr_manager_stats.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
if (NOT ${OS_ESW})
add_library(tmr_manager STATIC ${_sources})
set_target_properties(tmr_manager PROPERTIES LINKER_LANGUAGE C)
install(TARGETS tmr_manager LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif()
