# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 2.8.9)
#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
project(tmrctr)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xtmrctr.c)
collect (PROJECT_LIB_HEADERS xtmrctr.h)
collect (PROJECT_LIB_SOURCES xtmrctr_g.c)
collect (PROJECT_LIB_HEADERS xtmrctr_i.h)
collect (PROJECT_LIB_SOURCES xtmrctr_intr.c)
collect (PROJECT_LIB_SOURCES xtmrctr_l.c)
collect (PROJECT_LIB_HEADERS xtmrctr_l.h)
collect (PROJECT_LIB_SOURCES xtmrctr_options.c)
collect (PROJECT_LIB_SOURCES xtmrctr_selftest.c)
collect (PROJECT_LIB_SOURCES xtmrctr_sinit.c)
collect (PROJECT_LIB_SOURCES xtmrctr_stats.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(tmrctr STATIC ${_sources})
set_target_properties(tmrctr PROPERTIES LINKER_LANGUAGE C)
#install(TARGETS tmrctr LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
